include $(top_srcdir)/../../build/top.mk
## Process this file with automake to produce Makefile.in
## Do not forget to run automake ( --add-missing ) when you modify Makefile.am

bin_PROGRAMS = n2m

n2m_SOURCES = n2m.c n2m.h lib.c \
	conm2.c cord2r.c grid.c pbeam.c

include $(top_srcdir)/../../build/bot.mk
